--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-spinner": "^11.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xng-breadcrumb": "^6.8.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
